--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </label>
             <div class="input-wrapper">
               <input class="form-input" type="text" name="username" id="user-name" required/>
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -413,7 +413,7 @@
             </label>
             <div class="input-wrapper">
               <input class="form-input" type="text" name="user-phone" id="user-phone" required/>
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -425,7 +425,7 @@
             </label>
             <div class="input-wrapper">
               <input class="form-input" type="text" name="user-email" id="user-email" />
-              <svg class="input-icon" width="18" height="18">
+              <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
               </div>
@@ -442,16 +442,16 @@
      <div class="modal-field checkbox-field">
       <input type="checkbox" class="checkbox-style visually-hidden" name="policy-acception" id="policy-acception" value="answer"/>
     <label class="checkbox-label" for="policy-acception">
-      <span class="checkbox-icon">
+      <span>
         <svg width="10" height="8">
           <use href="./images/icons.svg#icon-acception"></use>
         </svg>
       </span> 
-      I accept the terms and conditions of the <span class="checkbox-label-part">Privacy Policy</span>
+      I accept the terms and conditions of the <a href="./index.html" class="checkbox-link-part">Privacy Policy</a>
 
     </label>
   </div>
-          <button class="modal-submit-button"type="submit">
+          <button class="modal-submit-button" type="submit">
             Send
           </button>
         </form>
@@ -500,6 +500,20 @@
                </ul>
               
 
+</div>
+<div class="footer-form">
+  <p class="subscr-title">Subscribe</p>
+  <form class="subscribtion-form" name="subscribtion_form">
+    <label for="subscr-input">  
+    </label>
+      <input class="subscr-input" name="subscr-input" id="subscr-input" type="email" placeholder="E-mail"/>
+        <button class="footer-button" type="submit">
+          Subscribe
+          <svg class="subscr-icon" width="24" height="20">
+            <use href="./images/icons.svg#icon-send"></use>
+          </svg>
+        </button>
+  </form>
 </div>
 </div>
     </footer>
